# gpu-sandbox

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  README_8md.html  annotated.html  build.py  cl__backend_8cpp.html  cl__backend_8cpp__incl.map  cl__backend_8cpp__incl.md5  cl__backend_8hpp.html  cl__backend_8hpp__dep__incl.map  cl__backend_8hpp__dep__incl.md5  cl__backend_8hpp__incl.map  cl__backend_8hpp__incl.md5  cl__backend_8hpp_source.html  cl__conv_8cpp.html  cl__conv_8cpp__incl.map  cl__conv_8cpp__incl.md5  cl__conv_8hpp.html  cl__conv_8hpp__dep__incl.map  cl__conv_8hpp__dep__incl.md5  cl__conv_8hpp__incl.map  cl__conv_8hpp__incl.md5  cl__conv_8hpp_source.html  cl__filter_8cpp.html  cl__filter_8cpp__incl.map  cl__filter_8cpp__incl.md5  cl__filter_8hpp.html  cl__filter_8hpp__dep__incl.map  cl__filter_8hpp__dep__incl.md5  cl__filter_8hpp__incl.map  cl__filter_8hpp__incl.md5  cl__filter_8hpp_source.html  cl__filter__blur_8cpp.html  cl__filter__blur_8cpp__incl.map  cl__filter__blur_8cpp__incl.md5  cl__filter__blur_8hpp.html  cl__filter__blur_8hpp__dep__incl.map  cl__filter__blur_8hpp__dep__incl.md5  (+219 more)
.github/workflows/: build.yml  clang-format.yml  docs-cpp.yml
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  defines_0.js  files_0.js  files_1.js  files_2.js  files_3.js  files_4.js  files_5.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  functions_9.js  (+14 more)
src/: cl_backend.cpp  cl_backend.hpp  cl_conv.cpp  cl_conv.hpp  cl_filter.cpp  cl_filter.hpp  cl_filter_blur.cpp  cl_filter_blur.hpp  cl_filter_gray.cpp  cl_filter_gray.hpp  cl_filter_motion.cpp  cl_filter_motion.hpp  cl_filter_sobel.cpp  cl_filter_sobel.hpp  color.hpp  cpu_conv.hpp  cpu_filter_blur.cpp  cpu_filter_blur.hpp  cpu_filter_flip.cpp  cpu_filter_flip.hpp  cpu_filter_gray.cpp  cpu_filter_gray.hpp  cpu_filter_motion.cpp  cpu_filter_motion.hpp  cpu_filter_sobel.cpp  cpu_filter_sobel.hpp  filter.hpp  image.cpp  image.hpp  main.cpp  timer.cpp  timer.hpp
src/cl/: common_def.cl  conv.cl  conv2.cl  filter_gray.cl
